--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "svelte-app-starter",
   "version": "0.0.1",
-  "license": "private",
+  "license": "MIT",
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
